Fixed navbar to the top | Fixed white space on right | Dashboard button fix

--- a/frontend/src/StyleSheets/Home.css
+++ b/frontend/src/StyleSheets/Home.css
@@ -237,10 +237,6 @@
   align-items: center;
 }
 
-.feature-icon {
-  margin-right: 10px;
-}
-
 @media only screen and (max-width: 515px) {
   .feature-icon-container {
     margin-left: -5px;
